# 2024

./: .gitignore  .gitmodules  Build_Debug.bat  Build_MinSizeRel.bat  Build_RelWithDebInfo.bat  Build_Release.bat  CMakeLists.txt  GenerateProjectFiles.bat  GenerateProjectFiles_vs2019.bat  GenerateProjectFiles_vs2022.bat  HotReload.bat  HotReload_vs2019.bat  HotReload_vs2022.bat  LICENSE.txt  Package_Debug.bat  Package_MinSizeRel.bat  Package_RelWithDebInfo.bat  Package_Release.bat  README.md  Run_Debug.bat  Run_MinSizeRel.bat  Run_RelWithDebInfo.bat  Run_Releasse.bat
Animation/: GenerateProjectFiles_vs2019.bat  GenerateProjectFiles_vs2022.bat
Animation3D/: CMakeLists.txt
CoinDash/: CMakeLists.txt  GenerateProjectFiles.bat  HotReload.bat  LICENSE.txt
CoinDash2D/: CMakeLists.txt
FoxDash/: Build_Debug.bat  CMakeLists.txt  GenerateProjectFiles.bat  Package_MinSizeRel.bat  Package_RelWithDebInfo.bat  Run_Debug.bat  Run_MinSizeRel.bat  Run_RelWithDebInfo.bat  Run_Release.bat
Game/: CMakeLists.txt
Game/Inc/: GameApp.h  Resource.rc.in
Game/Inc/App/: AppConfig.h.in  GameApp.h  IApp.h
Game/Inc/Audio/: AudioManager.h  Sound.h
Game/Inc/Crash/: CrashManager.h
Game/Inc/Entity/: Background.h  Camera2D.h  Coin.h  CoinSpawner.h  EntityManager.h  FadeEffector.h  Fire.h  FireSpawner.h  GameOver.h  GamePlayRecorder.h  HPBar.h  IEntity.h  IEntity2D.h  IObject.h  KeyArrowPressViewer.h  Messenger.h  MiniMap.h  PlayRecordViewer.h  Player.h  PlayerFollowCamera.h  Playground.h  Potion.h  RandomChest.h  ResultViewer.h  Title.h  UIBar.h  UIButton.h  UICamera.h  UIPanel.h  UISkill.h
Game/Inc/GL/: BlendColor.h  GLAssertion.h  GLManager.h  ITexture.h  IndexBuffer.h  PostProcessor.h  RenderManager2D.h  TTFont.h  Texture2D.h
Game/Inc/GLFW/: GLFWAssertion.h  GLFWManager.h  InputManager.h
Game/Inc/Game/: GameManager.h
Game/Inc/Physic/: Circle2D.h  ICollider2D.h  Line2D.h  OrientedRect2D.h  Point2D.h
Game/Inc/Scene/: GameDevScene.h  GameOptionScene.h  GameOverScene.h  GamePauseScene.h  GamePlayScene.h  GameRecordScene.h  GameTitleScene.h  IGameScene.h  SceneManager.h
Game/Inc/Utils/: Assertion.h  Math.h  Utils.h
Game/Src/: GameApp.cpp  Main.cpp
Game/Src/App/: GameApp.cpp  IApp.cpp
Game/Src/Audio/: AudioManager.cpp  Sound.cpp
Game/Src/Crash/: CrashManager.cpp
Game/Src/Entity/: Backdrop.cpp  Background.cpp  Coin.cpp  CoinCollector.cpp  CoinSpawner.cpp  EntityManager.cpp  FadeEffector.cpp  Fire.cpp  FireSpawner.cpp  GameOver.cpp  GamePlayRecorder.cpp  HPBar.cpp  IObject.cpp  KeyArrowPressViewer.cpp  Messenger.cpp  MiniMap.cpp  PlayRecordViewer.cpp  Player.cpp  PlayerFollowCamera.cpp  Playground.cpp  Potion.cpp  RandomChest.cpp  ResultViewer.cpp  Title.cpp  UIBar.cpp  UIButton.cpp  UICamera.cpp  UISkill.cpp  UISlider.cpp
Game/Src/GL/: BlendColor.cpp  GLManager.cpp  PostProcessor.cpp  RenderManager2D.cpp  TTFont.cpp  Texture2D.cpp  VertexBuffer.cpp
Game/Src/GLFW/: GLFWManager.cpp  InputManager.cpp
Game/Src/Game/: GameManager.cpp
Game/Src/Physic/: Circle2D.cpp  Line2D.cpp  OrientedRect2D.cpp  Point2D.cpp  Rect2D.cpp
Game/Src/Scene/: GameDevScene.cpp  GameOptionScene.cpp  GameOverScene.cpp  GamePauseScene.cpp  GamePlayScene.cpp  GameRecordScene.cpp  GameTitleScene.cpp  IGameScene.cpp  SceneManager.cpp
Game/Src/Utils/: Math.cpp  Utils.cpp
HyperCoinDash2D/: CMakeLists.txt
MiniGame/: CMakeLists.txt
MiniGame/CMake/: Config.cmake
MiniGame/Core/Inc/: IGameScene.h  RenderManager2D.h
MiniGame/Core/Inc/App/: IApp.h
MiniGame/Core/Inc/Audio/: AudioManager.h
MiniGame/Core/Inc/Entity/: UISkill.h
MiniGame/Core/Inc/GL/: GLManager.h  UniformBuffer.h  VertexBuffer.h
MiniGame/Core/Inc/Physic/: Line2D.h
MiniGame/Core/Inc/Utils/: Timer.h  Utils.h
MiniGame/Core/Src/: IApp.cpp  RenderStateManager.cpp  TTFont.cpp
MiniGame/Core/Src/Entity/: UISkill.cpp  UIText.cpp
MiniGame/Core/Src/GL/: PostProcessor.cpp  RenderManager2D.cpp  Texture2D.cpp  TextureAtlas2D.cpp  UniformBuffer.cpp
MiniGame/Core/Src/GLFW/: GLFWManager.cpp
MiniGame/Core/Src/Scene/: IGameScene.cpp
MiniGame/Core/Src/Utils/: MemoryAlloc.cpp
MiniGame/Script/: Build.bat  GenerateProjectFiles.bat  Run.bat
MiniGame/Shader/: Geometry.vert  PostProcessing.vert  TextureEx.frag  TextureEx.vert
Module/: README.md
Picking3D/: CMakeLists.txt  GenerateProjectFiles_vs2019.bat  GenerateProjectFiles_vs2022.bat  HotReload_vs2019.bat
Resource/: texture.atlas  texture.json
Runner/: CMakeLists.txt  README.md
Runner/Inc/: Entity2D.h  Floor.h  RewardViewer.h  SpriteAnimation.h
Runner/Res/Atlas/: Atlas.json
Runner/Runner/Inc/: CountDowner.h  GameApp.h  GameOver.h  Title.h
Runner/Runner/Src/: Box.cpp  Player.cpp  PlayerMessenger.cpp  Spawner.cpp  Title.cpp
Runner/Src/: CountDowner.cpp  GameApp.cpp  GameOver.cpp  RewardViewer.cpp  SpriteAnimation.cpp
Runner2D/: CMakeLists.txt
Script/: Build.bat  BuildSolution.bat  GenerateProjectFiles.bat  Package.bat  Run.bat  TrimTextureAtlas.py
Shader/: BlendColor.frag  Blit.frag  GaussianBlur.frag  Geometry.vert  Grayscale.frag  Inversion.frag  PostProcessing.frag  String.frag  String.vert  StringEx.vert  Texture.frag  Texture.vert
Tetris/: .gitignore  Build_Release.bat  CMakeLists.txt  README.md
Tetris/Inc/: Block.h  Board.h  GameApp.h  GameOverScene2D.h  GamePauseScene2D.h  GamePlayScene2D.h  MainCamera2D.h
Tetris/Res/UI/: HistoryText.ui  LevelPanel.ui  LevelText.ui  ScorePanel.ui  Start.ui  Title.ui
Tetris/Resource/UI/: Back.ui  Continue.ui  History.ui  Quit_GameTitleScene2D.ui  ScoreText.ui  Title.ui
Tetris/Src/: Board.cpp  GameApp.cpp  GameHistoryScene2D.cpp  GameOverScene2D.cpp  GamePlayScene2D.cpp  MainCamera2D.cpp  RenderManager2D.cpp  UserState.cpp
Tetris/Tetris/Inc/: GameHistoryScene2D.h  GameHistoryTracker.h  HighScoreViewer.h  HistoryViewer.h  Messenger.h  Particle.h  ParticleScheduler.h  Tetromino.h  UserState.h
Tetris/Tetris/Src/: EmptyPanel.cpp  GameApp.cpp  GameHistoryScene2D.cpp  GameHistoryTracker.cpp  GameOverScene2D.cpp  GamePauseScene2D.cpp  GamePlayScene2D.cpp  GameTitleScene2D.cpp  HighScoreViewer.cpp  Messenger.cpp
(+424 files in other folders)
